--- a/app/src/main/res/navigation/nav_graph_completed.xml
+++ b/app/src/main/res/navigation/nav_graph_completed.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/viewModelFlowFragment"
-        android:name="com.continuedlearning.flow.tasks.useaflow.ViewModelFlowFragment"
+        android:name="com.continuedlearning.flow.completedtasks.useaflow.ViewModelFlowFragment"
         android:label="view_model_flow_fragment"
         tools:layout="@layout/flow_task_fragment" >
         <action
